<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KassePro</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tabletversion_starten">Tabletversion starten</string>
    <string name="infoleiste">Infoleiste</string>
    <string name="hilfe">Hilfe</string>
    <string name="zur_kasse">zur Kasse</string><style name="ButtonText">
    	<item name="android:layout_width">fill_parent</item>
    	<item name="android:layout_height">wrap_content</item>
   		<item name="android:textColor">#ffffff</item>
    	<item name="android:gravity">center</item>
    	<item name="android:layout_margin">3dp</item>
    	<item name="android:textSize">30dp</item>
    	<item name="android:textStyle">bold</item>
    	<item name="android:shadowColor">#000000</item>
    	<item name="android:shadowDx">1</item>
    	<item name="android:shadowDy">1</item>
    	<item name="android:shadowRadius">2</item>
	</style>
    <string name="artikelbezeichnung">Artikelbezeichnung</string>
    <string name="preis">Preis</string>
    <string name="farbe_waehlen">Farbe wählen</string>
    <string name="vorschau">Vorschau</string>
    <string name="zum_taste_loeschen_longClick_ausfuehren">Zum Taste löschen LongKlick ausführen</string>
    <string name="taste_loeschen">Taste löschen</string>
    <string name="speichern">speichern</string>
    <string name="verwerfen">verwerfen</string>
    <string name="tastenzuweisung">Tastenzuweisung</string>
    <string name="taste_hat_keinen_wert">Taste hat keinen Wert</string>
    <string name="zusammenfassung">Zusammenfassung</string>
    <string name="menge">Menge</string>
    <string name="bezeichnung">Bezeichnung</string>
    <string name="ep">EP</string>
    <string name="gp">GP</string>
    <string name="zu_zahlender_betrag">zu zahlender Betrag</string>
    <string name="abbruch">Abbruch</string>
    <string name="geld_erhalten">Geld erhalten</string>
    <string name="erhaltener_betrag">erhaltener Betrag</string>
    <string name="wechselgeld">Wechselgeld</string>
    <string name="ok">OK</string>
    <string name="umsatzstatistik">Umsatzstatistik</string>
    <string name="bisheriger_umsatz">bisheriger Umsatz</string>
    <string name="umsaetze_loeschen">Umsätze löschen</string>
    <string name="vorname">Vorname</string>
    <string name="nachname">Nachname</string>
    <string name="adresse">Adresse</string>
    <string name="telefon">Telefon</string>
    <string name="email">eMail</string>
    <string name="hinzufuegen">hinzufügen</string>
    <string name="neuen_kunden_eintragen">neuen Kunden eintragen</string>
    <string name="guthaben">Guthaben</string>
    <string name="kundenuebersicht_von">Kundenübersicht von</string>
    <string name="extra">Extra</string>
    <string name="kundenmodus">Kunde</string>
    <string name="startdatum_auswaehlen">Startdatum auswählen</string>
    <string name="enddatum_auswaehlen">Enddatum auswählen</string>
    <string name="minus">-</string>
    <string name="export">Export</string>
    <string name="loeschen">löschen</string>
    <string name="email_fuer_export_eingeben">Email für Export eingeben</string>
    <string name="jetzt_exportieren">jetzt exportieren</string>
    <string name="datenexport_von_kassepro">Datenexport von KassePro</string>
    <string name="hilfetext">Hier kommt der Text für die Kurzanleitung hin</string>
    <string name="zurueck">zurück</string>
    <string name="liznez_pruefen">Lizenz prüfen</string>
    <string name="weiter">weiter</string>
    <string name="lizenzpruefung_ausstehend">Lizenzprüfung ausstehend</string>
    <string name="checking_license">prüfe Lizenz</string>
    <string name="allow">Lizenzprüfung erfolgreich</string>
    <string name="dont_allow">nicht erlauben</string>
    <string name="application_error">Programmfehler</string>
    <string name="unlicensed_dialog_title">keine gültige Lizenz</string>
    <string name="unlicensed_dialog_retry_body">keine Lizenz neuer Versuch</string>
    <string name="unlicensed_dialog_body">Es konnte keine gültige Lizenz gefunden werden!</string>
    <string name="retry_button">wiederholen</string>
    <string name="buy_button">kaufen</string>
    <string name="quit_button">beenden</string>
    <string name="lizenz_ok">Lizenz OK</string>
    <string name="lizenz_ungueltig">Lizenz ungültig</string>
    <string name="lizenzseite_text">Um KassePro nutzen zu können, müssen Sie eine gültige Lizenz besitzen. Es muss zur Prüfung eine Internetverbindung bestehen.</string>
    <string name="smartphone_version_starten">Smartphoneversion starten</string>
    <string name="kundenmodus_kurz_kmodus">Kd-Modus</string>
    <string name="Anz">Anz</string>
    <string name="warnung_kunden_delete">Es werden auch alle offenen Posten dieses Kunden gelöscht!</string>
    <string name="kundeloeschen">Kunde löschen?</string>
    <string name="kunden_wirklich_loeschen">Diesen Kunden wirklich löschen?</string>
    <string name="moechtenSieWirklichDenUmsatzLoeschen">Möchten Sie wirklich den Umsatz löschen?</string>
    <string name="sicherheitsabfrage">Sicherheitsabfrage</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="kassenanfangsbestand">Kassenanfangsbestand</string>
    <string name="einlage">Einlage</string>
    <string name="aktuellerKassenbestand">aktueller Kassenbestand</string>
    <string name="lizenzpruefung">Lizenzprüfung</string>
    <string name="jetzt_pruefen">jetzt prüfen</string>
    <string name="lizenz_pruefung_text">Die Lizenzprüfung ist mehrmals fehlgeschlagen. Bitte stellen Sie sicher, dass eine Internetverbindung beim Start der App besteht. Nach Ablauf der Versuche wird die App gesperrt.</string>
    <string name="keine_Versuche_mehr">Keine Versuche mehr. Bitte manuell prüfen.</string>
    <string name="export_als_csv_datei">Export als CSV-Datei</string>
    <string name="export_als_xml_datei">Export als  XML-Datei</string>
    <string name="lokale_xml_datei_erstellen">Lokale XML-Datei erstellen</string>
    <string name="lokale_csv_datei_erstellen">Lokale CSV-Datei erstellen</string>
</resources>
