<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_als_csv_datei"
        android:textSize="@dimen/TxTSizeSystemText" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_als_xml_datei"
        android:textSize="@dimen/TxTSizeSystemText" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lokale_xml_datei_erstellen"
        android:textSize="@dimen/TxTSizeSystemText" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lokale_csv_datei_erstellen"
        android:textSize="@dimen/TxTSizeSystemText" />

</LinearLayout>
