<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_textoben"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/lizenzseite_text"
        android:textSize="@dimen/TxtSizeInfoLeiste" />

    <Button
        android:id="@+id/btn_lizenzpruefer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/liznez_pruefen"
        android:textSize="@dimen/TxtSizeInfoLeiste" />

    <TextView
        android:id="@+id/tv_lizenzstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/lizenzpruefung_ausstehend"
        android:textSize="@dimen/TxtSizeInfoLeiste" />

    <Button
        android:id="@+id/btn_vor_weiter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/weiter"
        android:textSize="@dimen/TxtSizeInfoLeiste" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/asappitlogo" />

</LinearLayout>
