<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_delumsatz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/moechtenSieWirklichDenUmsatzLoeschen"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/TxtSizeInfoLeiste" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:weightSum="100" >

        <Button
            android:id="@+id/delumsatz_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/ok"
            android:textSize="@dimen/TxtSizeInfoLeiste" />

        <Button
            android:id="@+id/delumsatz_abbr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/zurueck"
            android:textSize="@dimen/TxtSizeInfoLeiste" />

    </LinearLayout>

</LinearLayout>
