<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linlayroot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/schwarz"
    android:orientation="vertical"
    android:weightSum="100" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="90" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blackbutton"
                android:gravity="center_horizontal"
                android:text="@string/zusammenfassung"
                android:textColor="@color/weiss"
                android:textSize="@dimen/TxtSizeInfoLeiste"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/tablelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:weightSum="100" >

                    <TextView
                        android:id="@+id/tv_hmenge"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:background="@drawable/blackbutton"
                        android:gravity="center_horizontal"
                        android:text="@string/menge"
                        android:textColor="@color/weiss"
                        android:textSize="@dimen/TxtSizeSysBtn"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_hbezeichnung"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="35"
                        android:background="@drawable/blackbutton"
                        android:text="@string/bezeichnung"
                        android:textColor="@color/weiss"
                        android:textSize="@dimen/TxtSizeSysBtn"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_hep"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:background="@drawable/blackbutton"
                        android:gravity="center_horizontal"
                        android:text="@string/ep"
                        android:textColor="@color/weiss"
                        android:textSize="@dimen/TxtSizeSysBtn"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_hgp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="25"
                        android:background="@drawable/blackbutton"
                        android:gravity="center_horizontal"
                        android:text="@string/gp"
                        android:textColor="@color/weiss"
                        android:textSize="@dimen/TxtSizeSysBtn"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:weightSum="100" >

        <TextView
            android:id="@+id/tv_zuzahlentext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:background="@drawable/blackbutton"
            android:gravity="right"
            android:text="@string/zu_zahlender_betrag"
            android:textColor="@color/weiss"
            android:textSize="@dimen/TxtSizeSysBtn"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_zahlBetrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="30"
            android:background="@drawable/blackbutton"
            android:gravity="right"
            android:text="TextView"
            android:textColor="@color/weiss"
            android:textSize="@dimen/TxtSizeSysBtn"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:weightSum="100" >

        <Button
            android:id="@+id/btn_geldabbruch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="@drawable/bluebutton"
            android:text="@string/abbruch"
            android:textColor="@color/weiss"
            android:textSize="@dimen/TxtSizeSysBtn" />

        <Button
            android:id="@+id/btn_geldErhalten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="@drawable/bluebutton"
            android:text="@string/geld_erhalten"
            android:textColor="@color/weiss"
            android:textSize="@dimen/TxtSizeSysBtn" />

    </LinearLayout>

</LinearLayout>
