<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/kunde_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vorname"
            android:textSize="@dimen/TxtSizeInfoLeiste" />

        <EditText
            android:id="@+id/et_kvorname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:nextFocusDown="@+id/et_knachname"
            android:textSize="@dimen/TxtSizeSysBtn" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nachname"
            android:textSize="@dimen/TxtSizeInfoLeiste" />

        <EditText
            android:id="@+id/et_knachname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:nextFocusDown="@id/et_knachname"
            android:textSize="@dimen/TxtSizeSysBtn" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/TxtSizeInfoLeiste" />

        <EditText
            android:id="@+id/et_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/et_kvorname"
            android:textSize="@dimen/TxtSizeSysBtn" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:weightSum="100" >

        <Button
            android:id="@+id/btn_kundendialog_speichern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:background="@drawable/bluebutton"
            android:text="@string/hinzufuegen"
            android:textSize="@dimen/TxtSizeSysBtn" />

        <Button
            android:id="@+id/btn_kundendialog_verwerfen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:background="@drawable/bluebutton"
            android:text="@string/verwerfen"
            android:textSize="@dimen/TxtSizeSysBtn" />

    </LinearLayout>

</LinearLayout>
